tests/functional/data/transpiler/common/errors/kernel/no_kernel1.err
no_kernel1.cpp:2:5: error: Attributed loop outside [@kernel] function
    2 |     @outer for (int i = 0; i < 10; ++i) {
      |     ^
